save parser work