@@ -26,12 +26,6 @@
             <artifactId>antlr4-runtime</artifactId>
             <version>4.9.1</version>
         </dependency>
-        <!-- Truffle dependencies -->
-        <dependency>
-            <groupId>org.graalvm.truffle</groupId>
-            <artifactId>truffle-api</artifactId>
-            <version>21.0.0</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -60,8 +54,7 @@
                     <source>11</source>
                     <target>11</target>
                     <compilerArgs>
-                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.frame=cfscript</arg>
-                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.nodes=cfscript</arg>
+
                     </compilerArgs>
                 </configuration>
             </plugin>
